--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -3,11 +3,12 @@ Brotli==1.1.0
 click==8.1.7
 dj-database-url==2.2.0
 Django==5.1.2
-django-ckeditor==6.7.1
+django-ckeditor-5==0.2.14
 django-js-asset==2.2.0
 gunicorn==23.0.0
 h11==0.14.0
 packaging==24.1
+pillow==11.0.0
 psycopg2-binary==2.9.10
 sqlparse==0.5.1
 typing_extensions==4.12.2
